2008-07-11  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Various fixes, based on patch by Jorn Baayen

	* vapi/gtk+-2.0.vapi: regenerated

2008-07-10  Raffaele Sandrini  <raffaele@sandrini.ch>

	* ccode/valaccodedeclaration.vala:
	* ccode/valaccodemodifiers.vala:
	* gobject/valatyperegisterfunction.vala:

	Revert commit revision 1691 due bad regressions, reopens bug
	540705

2008-07-10  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Fix g_timeout_add_full, g_idle_add_full, and g_child_watch_add_full
	bindings

2008-07-10  Jared Moore  <jaredm@svn.gnome.org>

	* ccode/valaccodedeclaration.vala:
	* ccode/valaccodemodifiers.vala:

	Added support for 'volatile' modifier in C code.

	* gobject/valatyperegisterfunction.vala:

	Make *_get_type functions thread safe, fixes bug 540705.

2008-07-10  Raffaele Sandrini  <raffaele@sandrini.ch>

	* gobject/valaccodegenerator.vala:
	* vala/valaproperty.vala:

	Change GObject properties to always notify on value change, remove the
	[Notify] attribute and add a boolean CCode attribute parameter named
	`notify', based on patch by Jared Moore, fixes bug 540700

	* tests/classes-properties.vala: update

2008-07-98  Jared Moore  <jaredm@svn.gnome.org>

	* gobject/valaccodecompiler.vala:

	Apply shell quoting to -X flag arguments, fixes bug 542183.

2008-07-09  Raffaele Sandrini  <raffaele@sandrini.ch>

	* gobject/valaccodegenerator.vala:
	* gobject/valaccodemethodbinding.vala:
	* vala/valacreationmethod.vala:
	* vala/valainterfacewriter.vala:
	* vapigen/valagidlparser.vala:

	Add support for creation methods with a different (mostly super) type
	than the type of the object it creates. Add a `type' parameter to the
	CCode attribute which will be used to get the casts right for such
	creation methods.

	* vapi/gio-2.0.vapi:
	* vapi/gtk+-2.0.vapi:

	Regenerated, fixes bug 540661

2008-07-08  Raffaele Sandrini  <raffaele@sandrini.ch>

	* vapi/packages/gtk+-2.0/gtk+-2.0.metadata:
	* vapigen/valagidlparser.vala:
