@@ -1,3 +1,12 @@
+2008-07-11  Raffaele Sandrini  <raffaele@sandrini.ch>
+
+	* gobject/valaccodemethodbinding.vala:
+	* vala/valamethod.vala:
+
+	Generate a type_real_name function also for abstract methods to warn
+	from buggy subclasses which fail to implement the abstract methods,
+	based on patch by Jared Moore, fixes bug 531195
+
 2008-07-11  Jürg Billeter  <j@bitron.ch>
 
 	* vapi/packages/gtk+-2.0/:
